# orange-desktop-app

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build_release.yml
src/: App.tsx  BottomNav.tsx  Layout.tsx  account.ts  constants.ts  main.tsx  tray.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CopyButton.tsx  FormRow.tsx  RadioButton.tsx  Row.tsx  TogglePassword.tsx
src/components/modals/: BaseModal.tsx  ConfirmPasswordModal.tsx  CreatePasswordModal.tsx  LogoutModal.tsx  WalletModal.tsx
src/hooks/: useAccountData.ts  useAssetData.ts  useBalances.ts  usePriceData.ts
src/lib/: initiatorSigner.ts  token.ts
src/pages/: Chart.tsx  Home.tsx  Miner.tsx  Node.tsx  Settings.tsx
src/pages/miner/: BalancesPanel.tsx  Header.tsx  LoginPanel.tsx  MiningPanel.tsx  SliderPanel.tsx  index.tsx  mining.ts
src/store/: GlobalStateProvider.tsx  store.ts
