[package]
name = "orange-desktop-app"
version = "0.3.0"
description = "Desktop app for Orange"
authors = ["bitshiftmod"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orange_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.7.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-clipboard-manager = "2.3.0"
tokio = "1.41.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }

